<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright © Paysafe Holdings UK Limited 2019. For more information see LICENSE
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="@dimen/margin_default"
                      android:layout_marginLeft="@dimen/margin_default"
                      android:layout_marginTop="@dimen/margin_default"
                      android:layout_marginEnd="@dimen/margin_default"
                      android:layout_marginRight="@dimen/margin_default"
                      android:textSize="@dimen/text_size_default"
                      android:textColor="@color/colorBlack"
                      android:layout_gravity="center"
                      android:text="Add address"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line1_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_line1"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line1_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@string/address_line1"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line2_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_line2"
                    app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line2_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@string/address_line2"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_city"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@string/address_city"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_state"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/state_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@string/address_state"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_country"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/country_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@string/address_country"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/postcode_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:hint="@string/hint_address_postcode"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/postcode_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:text="@string/address_postcode"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button android:id="@+id/add_address_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:padding="@dimen/padding_default"
                    android:text="@string/btn_add_address"
                    android:background="@color/colorBlue"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</layout>
