<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright © Paysafe Holdings UK Limited 2019. For more information see LICENSE
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:hint="@string/hint_card_number"
                app:errorEnabled="true"
                app:helperText="card number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/card_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=" 1234567890"
                    android:drawablePadding="5dip"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="19"
                    android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_expiry_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_small"
                android:hint="@string/hint_expiry_date"
                app:errorEnabled="true"
                app:helperText="MM/YY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number_text_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/ti_cvv">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_exp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_cvv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_small"
                android:hint="@string/hint_cvv"
                app:errorEnabled="true"
                app:helperText="3 digits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_number_text_input_layout"
                app:layout_constraintStart_toEndOf="@+id/card_expiry_date"
                app:layout_constraintHorizontal_bias="0.5">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/add_card_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/btn_add_card"
                android:background="@color/colorBlue"
                app:layout_constraintTop_toBottomOf="@id/card_expiry_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>